k8s/media-services/explo/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: explo
  namespace: media-services
  labels:
    app: explo
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: explo
